frontend/scss/organisms/_o-blocks.scss
.o-blocks {
  & > .f-deck {
    @include tucked-margin-top($f-deck, ('xsmall': 68));

    &:first-child {
      @include tucked-align-top($f-deck);
    }
  }

  & > .f-module-title-2 {
    @include tucked-margin-top($f-module-title-2, ('xsmall': 68));

    &:first-child {
      @include tucked-align-top($f-module-title-2);
    }
  }

  & > .f-subheading-1 {
    @include tucked-margin-top($f-subheading-1, ('xsmall': 56));

    &:first-child {
      @include tucked-align-top($f-subheading-1);
    }
  }


  & > .f-body {
    @include tucked-margin-top($f-body, ('xsmall': 56));

    &:first-child {
      @include tucked-align-top($f-body);
    }
  }

  & > .f-body-editorial {
    @include tucked-margin-top($f-body-editorial, ('xsmall': 56));

    &:first-child {
      @include tucked-align-top($f-body-editorial);
    }
  }

  & > .f-secondary {
    @include tucked-margin-top($f-secondary, ('xsmall': 48));

    &:first-child {
      @include tucked-align-top($f-secondary);
    }
  }

    & > .f-subheading-1 + .f-body,
    & > .f-subheading-1 + .f-body-editorial {
      margin-top: 0;
    }

    & > .m-media + .f-body,
    & > .m-media + .f-body-editorial,
    & > .quote + .f-body,
    & > .quote + .f-body-editorial {
      @include tucked-margin-top($f-body, ('xsmall': 60));
    }

  & > .f-deck,
  & > .f-body,
  & > .f-body-editorial {
    padding-right: colspan(2, xsmall);

    @include breakpoint('small+') {
      padding-right: colspan(3, small);
    }

    @include breakpoint('medium+') {
      padding-right: 0;
    }
  }

  $blockClasses: o-accordion, o-gallery, o-row-listing, m-inline-aside, m-media, m-link-list, m-cta-banner, m-aside-newsletter--wide, m-row-block, quote;

  $blockClassesCompiled: '';
  @each $blockClass in $blockClasses {
    $i: index($blockClasses, $blockClass);
    @if ($i > 1) {
      $blockClassesCompiled: "#{$blockClassesCompiled}, .#{$blockClass}"
    } @else {
      $blockClassesCompiled: ".#{$blockClass}"
    }
  }

  #{$blockClassesCompiled} {
    clear: both;
    margin-top: 32px;

    @include breakpoint('small+') {
      margin-top: 44px;
    }

    @include breakpoint('medium+') {
      margin-top: 60px;
    }
  }

  // this produces ALOT of CSS..
  @each $blockClass in $blockClasses {
    .f-module-title-2 + .#{$blockClass},
    .f-subheading-1 + .#{$blockClass},
    .#{$blockClass} + .#{$blockClass} {
      margin-top: 24px;

      @include breakpoint('small+') {
        margin-top: 36px;
      }

      @include breakpoint('medium+') {
        margin-top: 48px;
      }
    }
  }

  .o-gallery,
  .m-media--m,
  .m-media--l,
  .m-cta-banner,
  .m-aside-newsletter--wide {
    @include breakpoint('medium+') {
      width: colspan(58, medium);
      margin-right: colspan(20, medium, 0, true);
    }

    @include breakpoint('large+') {
      width: colspan(58, large);
      margin-right: colspan(20, large, 0, true);
    }

    @include breakpoint('xlarge+') {
      width: colspan(58, xlarge);
      margin-left: colspan(15, xlarge, 0, true);
    }

    @include breakpoint('xxlarge') {
      width: colspan(58, xxlarge);
      margin-left: colspan(15, xxlarge, 0, true);
    }
  }

  .m-media--m {
    @include breakpoint('xlarge+') {
      display: flex;
      flex-flow: row-reverse nowrap;
    }
  }

  .m-media--m .m-media__img {
    @include breakpoint('xlarge+') {
      flex: 0 0 auto;
      width: colspan(43, xlarge);
    }

    @include breakpoint('xxlarge') {
      width: colspan(43, xxlarge);
    }
  }

  .m-media--m figcaption {
    @include breakpoint('xlarge+') {
      flex: 0 0 auto;
      width: colspan(15, xlarge);
      padding-right: colspan(2, xlarge);
    }

    @include breakpoint('xxlarge') {
      width: colspan(15, xxlarge);
      padding-right: colspan(2, xxlarge);
    }
  }

  .m-inline-aside {
    @include breakpoint('small') {
      clear: both;
      float: left;
      width: colspan(23, small);
      margin-right: colspan(3, small);
      margin-bottom: colspan(3, small);
    }
  }

  & > .f-body a {
    color: $color__link--accent;
    text-decoration: underline;

    &:hover,
    &:focus {
      color: $color__link--accent-hover;
    }

    &:active {
      color: $color__link--accent-active;
    }
  }

  & > .f-body-editorial a {
    color: $color__link--editorial;
    text-decoration: underline;

    &:hover,
    &:focus {
      color: $color__link--editorial-hover;
    }

    &:active {
      color: $color__link--editorial-active;
    }
  }

  & > .f-body sub a,
  & > .f-body sup a,
  & > .f-body-editorial sub a,
  & > .f-body-editorial sup a {
    text-decoration: none;
  }
}

